# Clientes

./: populate_script.py  pyproject.toml  requirements.txt
clientes/: admin.py  models.py  serializers.py  validetors.py
clientes/migrations/: 0001_initial.py  0002_alter_cliente_celular.py
config/: settings.py
setup/: settings.py
